[tool.poetry]
name = "travel-adk-multiagent"
version = "0.1.0"
description = "Laboratorio UCV: sistema multiagente de viajes con Google ADK"
authors = ["Anderson Javier Musaja Lopez"]
readme = "README.md"
packages = [{ include = "travel_assistant" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
google-adk = {extras = ["extensions"], version = "^2.2.0"}
python-dotenv = "^1.0.1"
google-generativeai = "^0.8.6"
litellm = ">=1.83.7, <=1.83.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=travel_assistant --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"